# solar4x

./: Cargo.toml  README.md  keymap.toml  main_objects.json  shell.nix
gamefiles/trajectories/: te
src/: app.rs  bodies.rs  body.rs  client.rs  client_plugin.rs  core_plugin.rs  engine.rs  engine_plugin.rs  game.rs  gravity.rs  gui_plugin.rs  influence.rs  input.rs  input_plugin.rs  keyboard.rs  leapfrog.rs  lib.rs  main.rs  main_game.rs  network.rs  objects.rs  physics.rs  prelude.rs  server.rs  server_plugin.rs  spaceship.rs  standalone.rs  standalone_plugin.rs  trajectory.rs  tui_plugin.rs  ui.rs  ui_plugin.rs  utils.rs
src/app/: body_data.rs  body_id.rs  events.rs  info.rs  input.rs  list.rs  search.rs  tree.rs
src/bodies/: bodies_config.rs  body.rs  body_data.rs  body_id.rs  info.rs
src/body/: body_data.rs  body_id.rs
src/client/: explorer_mode.rs  singleplayer.rs
src/client_plugin/: explorer_mode.rs  singleplayer.rs
src/engine/: body.rs
src/game/: trajectory.rs
src/input/: key.rs  keyboard.rs
src/main_game/: trajectory.rs
src/objects/: bodies.rs  body.rs  id.rs  ship.rs  ships.rs
src/objects/bodies/: bodies_config.rs  body_data.rs  main_bodies.rs
src/objects/body/: body_data.rs  body_id.rs  main_bodies.rs
src/objects/ships/: trajectory.rs
src/physics/: influence.rs  leapfrog.rs  orbit.rs  predictions.rs  time.rs
src/tui_plugin/: explorer_screen.rs  info_plugin.rs  info_widget.rs  main_screen.rs  search_plugin.rs  space_map_plugin.rs  tree_plugin.rs  tree_widget.rs
src/ui/: draw.rs  editor_gui.rs  events.rs  gui.rs  gui_plugin.rs  screen.rs  search.rs  tree.rs  widget.rs
src/ui/gui/: editor_gui.rs
src/ui/screen/: editor.rs  explorer.rs  fleet.rs  start.rs
src/ui/screen/editor/: editor_backend.rs
src/ui/widget/: info.rs  search.rs  space_map.rs  tree.rs
src/ui_plugin/: editor_gui.rs  editor_screen.rs  explorer_screen.rs  fleet_screen.rs  gui_plugin.rs  search.rs  search_plugin.rs  space_map_plugin.rs  start_menu.rs  tree_plugin.rs  tree_widget.rs
src/utils/: algebra.rs  args.rs  de.rs  ecs.rs  hash.rs  list.rs  ui.rs
