[package]
name = "rust_space_trading"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["dynamic_linking"] }
bincode = "1.3.3"
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
nalgebra = "0.32.5"
num-bigint = "0.4.5"
ratatui = "0.26.3"
renet = "0.0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
tokio = {version = "1.38.0", features = ["full"] }

[features]
radius = []
azerty = []
asteroids = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
