[package]
name = "rust_space_trading"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.14.0", default-features = false, features = [
  "multi_threaded", # Run with multithreading
  "bevy_asset",     # Assets management
  # "bevy_audio",         # Builtin audio
  # "bevy_gilrs",         # Gamepad input support
  "bevy_scene",         # Scenes management
  "bevy_winit",         # Window management (cross-platform Winit backend)
  "bevy_state",         # Enable built in global state machines
  "bevy_render",        # Rendering framework core
  "bevy_color",         # Provides shared color types and operations
  "bevy_core_pipeline", # Common rendering abstractions
  "bevy_gizmos",        # Support drawing debug lines and shapes
  "bevy_sprite",        # 2D (sprites) rendering
  # "bevy_pbr",           # 3D (physically-based) rendering
  # "bevy_gltf",          # GLTF 3D assets format support
  "bevy_text", # Text/font rendering
  "bevy_ui",   # UI toolkit
  # "animation",          # Animation support
  # "tonemapping_luts",   # Support different camera Tonemapping modes (enables KTX2+zstd)
  "default_font", # Embed a minimal default font for text/UI
  "x11",          # Linux: Support X11 windowing system
  "wayland",      # (Linux) Support Wayland windowing system
] }
bevy_ratatui = "0.6.0"
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
ratatui = { version = "0.27.0", features = ["unstable-widget-ref"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
toml = "0.8.14"
color-eyre = "0.6.3"
bevy_quinnet = "0.9.0"
arrayvec = { version = "0.7.4", features = ["serde"] }
tempfile = "3.10.1"
rand = "0.8.5"
vectorize = "0.2.0"

[features]
asteroids = []

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
